still trying to figure out why divergent fist isn't showing up

--- a/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
+++ b/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
@@ -6,4 +6,6 @@
   <content contentuid="h4eea73a6g23e2ga67ag60e7gdf7ee0bb62cf" version="2">Punch twice in quick succession dealing [1] and [2] for both strikes.</content>
   <content contentuid="h0f53567cg03dcg19dcg722bg8ee81a3b211c" version="1">Divergent Fist</content>
   <content contentuid="hd5371681g704ag4735g6f5fgfb251dff6d5d" version="1">Hit a target with your bare fists dealing [1].</content>
+  <content contentuid="hcd8302c7g0b81g7937g8714g2bc94667fc30" version="1">Taijutsu Master</content>
+  <content contentuid="h3336c987g9a1cg7dcbg31bcg36b00de4744f" version="1">You are master in hand-to-hand combats, coating your fists in cursed energy to cause damage to your enemy.</content>
 </contentList>
