--- a/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
+++ b/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
@@ -61,10 +61,16 @@
   <content contentuid="h6b10812eg1e85g9b8eg82b7g7f589fbdbac5" version="1">Gain [1]</content>
   <content contentuid="h01389b49gd95fg3631gfc49gf971c334d2a2" version="1">Cursed Armour</content>
   <content contentuid="hf178dd5fg88c4g5fb4g00beg8634d299bdd7" version="1">Gain temporary hitpoints for cursed energy spent times 3 for a minute or until they run out.</content>
-  <content contentuid="h7a32d61dge3e4g32e2gfe3dg5f15a3d48879" version="1">Cursed Armour</content>
+  <content contentuid="h7a32d61dge3e4g32e2gfe3dg5f15a3d48879" version="2">Cursed Armour: Small</content>
   <content contentuid="he93489d9gcbe9g0dfdg846ega5589565272f" version="1">Gain [1]</content>
-  <content contentuid="hbe5c92dbgb778gfcadg6c5fg2cb229755421" version="1">Cursed Armour</content>
+  <content contentuid="hbe5c92dbgb778gfcadg6c5fg2cb229755421" version="2">Cursed Armour: Medium</content>
   <content contentuid="h610a57e7g1460ge7ecg2caage0a3078c0094" version="1">Gain [1]</content>
-  <content contentuid="h58c69632ge90bg3a02g2c0dga465467c005f" version="1">Cursed Armour</content>
+  <content contentuid="h58c69632ge90bg3a02g2c0dga465467c005f" version="2">Cursed Armour: Large</content>
   <content contentuid="h1312325bga55agc447gf52egebf75ee359e7" version="1">Gain [1]</content>
+  <content contentuid="hdf0a3eafgf65fg4764gd70cg827064eb9729" version="1">Cursed Weapon Enhancement</content>
+  <content contentuid="h3a22de28gc114g8b94gc83dg89f5ea7bac36" version="1">Grants an additional [1]</content>
+  <content contentuid="h547ec0e9g0f88gfde7gca81gfc0cd19819b5" version="1">Semi-Cursed Tool</content>
+  <content contentuid="h7b6b33a5g205fg9f67g63c2g358c6b8e9c8d" version="1">This tool has been embued with cursed energy permanently from the consistent usage of enhancing the weapon. This weapon will now deal an additional [1] with this permanent buff</content>
+  <content contentuid="h02292e48ga9cbg9293g67e5gf8130744bd78" version="1">Cursed Weapon Enhancement</content>
+  <content contentuid="h4bb57742g2a48g44e1gcf53g8ed0e3b86c37" version="1">Grants an additional [1]</content>
 </contentList>
