Began One Piece Mod

--- a/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
+++ b/Mods/JujutsuSorcerer_00c9c3bb-cbfa-68c9-bfc3-bdd84eb24db0/Localization/English/english.xml
@@ -73,4 +73,6 @@
   <content contentuid="h7b6b33a5g205fg9f67g63c2g358c6b8e9c8d" version="1">This tool has been embued with cursed energy permanently from the consistent usage of enhancing the weapon. This weapon will now deal an additional [1] with this permanent buff</content>
   <content contentuid="h02292e48ga9cbg9293g67e5gf8130744bd78" version="1">Cursed Weapon Enhancement</content>
   <content contentuid="h4bb57742g2a48g44e1gcf53g8ed0e3b86c37" version="1">Grants an additional [1]</content>
+  <content contentuid="h1fc2d36fg30b0g1e6ag89afgf875f3e8d47b" version="1">Cursed Energy Enhancement</content>
+  <content contentuid="he741ef07g5585g7b3dg5696g961e87336230" version="2">You began to focus your cursed energy to manipulate it better. Choose one of the following to learn: </content>
 </contentList>
